[tool.poetry]
name = "2025-p1-chrischudleigh"
version = "0.1.0"
description = ""
authors = ["Chris Chudleigh <chrischudleigh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
